--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">Intro</a></li>
+								<li><a href="https://lewismike.com/blog">Blog</a></li>
 								<li><a href="#work">Work</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
