--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<span class="icon fa-laptop"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Mike</h1>
+								<h1>ML</h1>
 								<p>Things I find interesting:</p>
 							</div>
 						</div>
