--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Lewis, Mike</title>
+		<title>ML<title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -28,11 +28,11 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-laptop"></span>
+							<span class="icon fas fa-laptop"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>ML</h1>
+								<h1>M L</h1>
 								<p>Things I find interesting:</p>
 							</div>
 						</div>
