--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fas fa-laptop"></span>
+							<span class="fa fa-laptop"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
