--- a/index.html
+++ b/index.html
@@ -38,12 +38,13 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">Intro</a></li>
+								<li><a href="https://www.linkedin.com/in/lewismichaelsteven">Connect</a></li>
 								<li><a href="https://lewismike.com/blog">Blog</a></li>
 								<li><a href="#work">Work</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
+								<!--<li><a href="#intro">Intro</a></li>-->
 							</ul>
 						</nav>
 					</header>
@@ -77,7 +78,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<form method="post" action="https://formspree.io/lewismike@me.com">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -351,7 +352,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; ML. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
