--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>M L</h1>
-								<p>Things I find interesting:</p>
+								<!--<p>Things I find interesting:</p>-->
 							</div>
 						</div>
 						<nav>
