--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 							<ul>
 								<li><a href="https://www.linkedin.com/in/lewismichaelsteven">Connect</a></li>
 								<li><a href="https://lewismike.com/blog">Blog</a></li>
-								<li><a href="#work">Work</a></li>
-								<li><a href="#about">About</a></li>
+								<!--<li><a href="#work">Work</a></li>
+								<li><a href="#about">About</a></li>-->
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 								<!--<li><a href="#intro">Intro</a></li>-->
@@ -98,12 +98,12 @@
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</form>
-								<ul class="icons">
+								<!--<ul class="icons">
 									<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
+								</ul>-->
 							</article>
 
 						<!-- Elements -->
