image for article1

--- a/index.html
+++ b/index.html
@@ -55,24 +55,24 @@
 						<!-- Article 1 -->
 							<article id="blog">
 								<h2 class="major">Sending … Sent!</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<span class="image main"><img src="images/network-cable.jpeg" alt="" /></span>
 								<p>In setting up this website, I thought about how much we’ve advanced in our ability to exchange information. Almost everything we do involves the process of imparting or receiving data and making sense of it. Not too long ago, the idea of a simple thing like sending an email to someone miles away might have sounded like a superpower. This, along with other technologies are easily taken for granted and we rarely take the time to think about the path a message takes. </p>
-<br>
-<p>Long before the internet, in 490 B.C. a Greek messenger was tasked with announcing an important victory over the Persians. To deliver the news, he ran 25 miles from Marathon to Athens. After delivering the news he died of exhaustion! Today, that news could make its way around the world in seconds. Packets of information flying at unimaginable speeds over thousands of miles of thick wires across land and ocean. </p>
-<br>
-<p>Even though the Internet feels like an invisible force it’s a very physical process. Data travels as signals on wires. The data is organized into packets of information that helps them get to where they’re going and re-assemble once they arrive (most of the time a single request or message is broken into several packets). Routers are the Postal Service of the internet that ensure packets are delivered to the right location. Instead of mailing address, servers and computers connected to the internet use IP addresses. </p>
-<p>Like connecting flights are sometimes required to fly to your destination, many routers are used to guide packets across the network. </p>
-<br>
-<p>Signals across wires - carrying pieces of a message - that reassemble like a puzzle at the right time and the right location. It’s an impressive feat. There’s still a marathon happening behind the scenes, but luckily we can sit back and relax while packers and routers do the running. </p>
-<br>
-<p>References / interesting resources:</p>
-<ul><li><a href="http://www.investintech.com/content/historyinternet/">Website hosted by one of the teams of people that help make the internet happen</a>
-</li><li><a href="http://www.investintech.com/content/historyinternet/">A guide to the history of the internet</a>
-</li><li><a href="https://computer.howstuffworks.com/question525.htm">What is a packet?</a>
-</li><li><a href="https://en.wikipedia.org/wiki/History_of_communication#History_of_telecommunication">History of communication </a>
-</li><li><a href="https://www.submarinecablemap.com">Submarine cable map </a>
-</li><li><a href="http://mentalfloss.com/article/60150/10-facts-about-internets-undersea-cables">Interesting facts about underwater cables</a>
-</li></ul>
+								<br>
+								<p>Long before the internet, in 490 B.C. a Greek messenger was tasked with announcing an important victory over the Persians. To deliver the news, he ran 25 miles from Marathon to Athens. After delivering the news he died of exhaustion! Today, that news could make its way around the world in seconds. Packets of information flying at unimaginable speeds over thousands of miles of thick wires across land and ocean. </p>
+								<br>
+								<p>Even though the Internet feels like an invisible force it’s a very physical process. Data travels as signals on wires. The data is organized into packets of information that helps them get to where they’re going and re-assemble once they arrive (most of the time a single request or message is broken into several packets). Routers are the Postal Service of the internet that ensure packets are delivered to the right location. Instead of mailing address, servers and computers connected to the internet use IP addresses. </p>
+								<p>Like connecting flights are sometimes required to fly to your destination, many routers are used to guide packets across the network. </p>
+								<br>
+								<p>Signals across wires - carrying pieces of a message - that reassemble like a puzzle at the right time and the right location. It’s an impressive feat. There’s still a marathon happening behind the scenes, but luckily we can sit back and relax while packers and routers do the running. </p>
+								<br>
+								<p>References / interesting resources:</p>
+								<ul><li><a href="http://www.investintech.com/content/historyinternet/">Website hosted by one of the teams of people that help make the internet happen</a>
+								</li><li><a href="http://www.investintech.com/content/historyinternet/">A guide to the history of the internet</a>
+								</li><li><a href="https://computer.howstuffworks.com/question525.htm">What is a packet?</a>
+								</li><li><a href="https://en.wikipedia.org/wiki/History_of_communication#History_of_telecommunication">History of communication </a>
+								</li><li><a href="https://www.submarinecablemap.com">Submarine cable map </a>
+								</li><li><a href="http://mentalfloss.com/article/60150/10-facts-about-internets-undersea-cables">Interesting facts about underwater cables</a>
+								</li></ul>
 							</article>
 
 
