--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<nav>
 							<ul>
 								<li><a href="https://www.linkedin.com/in/lewismichaelsteven">Connect</a></li>
-								<li><a href="#blog">Blog</a></li>
+								<li><a href="https://lewismike.com/content">Blog</a></li>
 								<!--<li><a href="#work">Work</a></li>
 								<li><a href="#about">About</a></li>-->
 								<li><a href="#contact">Contact</a></li>
